bufferc-examples/examples/test_types.bc
module test_types {

  // Some tests for the type checking rules,
  // including some erroneous expressions.
	
	int inc(int x) {
		return x + 1;
	}
	
	int integer_expressions() {  
		int x;
		int y = 2;
		x + y;	
		x - y;
		x - 3;
		x * 2;
		x * y + 4 - 3;
		x++;
		boolean z = true;
		z = z && false || true; 
	}
	
	int boolean_expressions() {
		int x;
		boolean z = true;
		z = z && false || true;
		z = 1 < x;
	}

	int buffer_expressions() {
    buffer b = create(3);
    int x = b.length;
    char c = b[true]; // error
    int i = b[3]; // error
    char d = x[3]; // error
    b[2] = 'c'; 
    b[2] = 4; // error
    b = "adlkjfa";
    b = 4;  // error
    x = 5;
    x = b;
	}
	
	int print_expressions() {
		print("a");
	}
	
} 

